--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
   "devDependencies": {
-    "tslint": "^6.0.0-beta0",
+    "@types/react-bootstrap": "^0.32.20",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
