Wamp connection form with values from store

--- a/package.json
+++ b/package.json
@@ -25,36 +25,39 @@
     ]
   },
   "dependencies": {
-    "@types/jest": "24.0.21",
-    "@types/node": "12.12.5",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
+    "autobahn": "^19.10.1",
     "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
-    "typescript": "3.6.4",
+    "typescript": "^3.7.2",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1"
   },
   "devDependencies": {
+    "@types/autobahn": "^18.10.0",
+    "@types/node": "^12.12.6",
+    "@types/react": "^16.9.11",
     "@types/react-bootstrap": "^0.32.20",
+    "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/redux-logger": "^3.0.7",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
