--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autobahn": "^19.10.1",
     "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
@@ -43,10 +44,12 @@
     "rxjs": "^6.5.3",
     "typescript": "^3.7.2",
     "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1"
+    "typescript-fsa-reducers": "^1.2.1",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "@types/autobahn": "^18.10.0",
+    "@types/lodash": "^4.14.145",
     "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
     "@types/react-bootstrap": "^0.32.20",
@@ -55,6 +58,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/redux-logger": "^3.0.7",
+    "@types/ws": "^6.0.3",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "tslint": "^5.20.1",
