--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   "dependencies": {
     "autobahn": "^19.10.1",
     "connected-react-router": "^6.5.2",
+    "fp-ts": "^2.1.1",
     "history": "^4.10.1",
+    "io-ts": "^2.0.1",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
