--- a/package.json
+++ b/package.json
@@ -25,13 +25,19 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "autobahn": "^19.10.1",
     "connected-react-router": "^6.5.2",
+    "formik": "^2.0.3",
     "fp-ts": "^2.1.1",
     "history": "^4.10.1",
     "io-ts": "^2.0.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
@@ -48,6 +54,7 @@
     "typescript": "^3.7.2",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
+    "uuid": "^3.3.3",
     "ws": "^7.2.0"
   },
   "devDependencies": {
@@ -61,6 +68,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.2",
     "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^3.4.6",
     "@types/ws": "^6.0.3",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
