--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "typescript": "^3.7.2",
     "typescript-fsa": "^3.0.0",
     "typescript-fsa-reducers": "^1.2.1",
-    "uuid": "^3.3.3",
-    "ws": "^7.2.0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/autobahn": "^18.10.0",
@@ -77,7 +76,8 @@
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-misc-rules": "^3.5.1",
-    "tslint-react": "^4.1.0"
+    "tslint-react": "^4.1.0",
+    "ws": "^7.2.0"
   },
   "engines": {
     "node": "12.x"
