--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "react-scripts start",
+    "start": "node server/app.js",
     "start:demo": "node scripts/wamp-demo.js",
     "test": "react-scripts test"
   },
@@ -25,15 +26,34 @@
     ]
   },
   "dependencies": {
+    "chalk": "^3.0.0",
+    "express": "^4.17.1",
+    "log4js": "^5.3.0"
+  },
+  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@types/autobahn": "^18.10.0",
+    "@types/lodash": "^4.14.145",
+    "@types/node": "^12.12.6",
+    "@types/react": "^16.9.11",
+    "@types/react-bootstrap": "^0.32.20",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-bootstrap": "^0.24.5",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^3.4.6",
+    "@types/ws": "^6.0.3",
     "autobahn": "^19.10.1",
+    "bootstrap": "^4.3.1",
     "connected-react-router": "^6.5.2",
     "fp-ts": "^2.1.1",
     "history": "^4.10.1",
     "io-ts": "^2.0.1",
+    "jquery": "^3.4.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -50,26 +70,6 @@
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.3",
-    "typescript": "^3.7.2",
-    "typescript-fsa": "^3.0.0",
-    "typescript-fsa-reducers": "^1.2.1",
-    "uuid": "^3.3.3"
-  },
-  "devDependencies": {
-    "@types/autobahn": "^18.10.0",
-    "@types/lodash": "^4.14.145",
-    "@types/node": "^12.12.6",
-    "@types/react": "^16.9.11",
-    "@types/react-bootstrap": "^0.32.20",
-    "@types/react-dom": "^16.9.3",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router-bootstrap": "^0.24.5",
-    "@types/react-router-dom": "^5.1.2",
-    "@types/redux-logger": "^3.0.7",
-    "@types/uuid": "^3.4.6",
-    "@types/ws": "^6.0.3",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
@@ -77,6 +77,10 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-misc-rules": "^3.5.1",
     "tslint-react": "^4.1.0",
+    "typescript": "^3.7.2",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.1",
+    "uuid": "^3.3.3",
     "ws": "^7.2.0"
   },
   "engines": {
