--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "asap",
-  "version": "0.1.0",
+  "name": "msg-central",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
